# Get_to_know_STM32F103

./: LICENSE.md  README.md
Datasheets/: Readme.md
stm32f103_workspace/: Cargo.toml  memory.x
stm32f103_workspace/.cargo/: config.toml
stm32f103_workspace/hall_lib/: Cargo.toml
stm32f103_workspace/hall_lib/src/: lib.rs
stm32f103_workspace/hall_lib/src/gpio/: mod.rs
stm32f103_workspace/turn_led_on_power_up/: Cargo.toml
stm32f103_workspace/turn_led_on_power_up/src/: main.rs
